fix(List): adjust toolbar items align (#162)

--- a/src/List/Toolbar/Pagination/Pagination.scss
+++ b/src/List/Toolbar/Pagination/Pagination.scss
@@ -1,3 +1,9 @@
+:global(.navbar-btn.btn-group) {
+	display: inline-flex;
+	justify-content: space-between;
+	align-items: baseline;
+}
+
 .tc-pagination-ctrl-prev {
 	transform: rotate(180deg);
 }
