--- a/src/List/Toolbar/SelectSortBy/SelectSortBy.scss
+++ b/src/List/Toolbar/SelectSortBy/SelectSortBy.scss
@@ -3,12 +3,12 @@
 $tc-list-toolbar-display-color: $dove-gray !default;
 
 .tc-list-toolbar-sort-by {
+	display: flex;
+
 	:global(.navbar-btn.btn) {
 		color: $tc-list-toolbar-display-color;
 		font-size: 1em;
 		margin: 0;
-		padding-top: $navbar-padding-vertical;
-		padding-bottom: $navbar-padding-vertical;
 		letter-spacing: 0;
 	}
 }
